# lr-fastapi

./: .gitignore  pyproject.toml  service.py  train.py
